force-app/main/default/objects/OutboundEnquiry__c/OutboundEnquiry__c.object-meta.xml
<CustomObject>
    <label>Outbound Enquiry</label>
    <nameField>
        <label>Outbound Enquiry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outbound Enquiries</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>