force-app/main/default/objects/OutboundEnquiry__c/fields/ClientName__c.field-meta.xml
<CustomField>
    <fullName>ClientName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Outbound Enquiries</relationshipLabel>
    <relationshipName>Outbound_Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>