force-app/main/default/objects/OutboundEnquiry__c/fields/EnquiryName__c.field-meta.xml
<CustomField>
    <fullName>EnquiryName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiry Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Outbound Enquiries</relationshipLabel>
    <relationshipName>Outbound_Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>