force-app/main/default/objects/OutboundEnquiry__c/fields/ReferredByGTMemberFirms__c.field-meta.xml
<CustomField>
    <fullName>ReferredByGTMemberFirms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred By GT Member Firms</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Outbound_Enquiries1</relationshipName>
    <type>Lookup</type>
</CustomField>