force-app/main/default/objects/OutboundEnquiry__c/fields/ReferredByNonLinKretaUsers__c.field-meta.xml
<CustomField>
    <fullName>ReferredByNonLinKretaUsers__c</fullName>
    <label>Referred By Non-LinKreta Users</label>
    <length>255</length>
    <type>Text</type>
</CustomField>