force-app/main/default/objects/OutboundEnquiry__c/fields/TentativeValueOfTheReferredWorkIN__c.field-meta.xml
<CustomField>
    <fullName>TentativeValueOfTheReferredWorkIN__c</fullName>
    <label>Tentative value of the Referred Work(INR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>