force-app/main/default/objects/OutboundEnquiry__c/fields/TypeOfWork__c.field-meta.xml
<CustomField>
    <fullName>TypeOfWork__c</fullName>
    <label>Type of Work</label>
    <length>255</length>
    <type>Text</type>
</CustomField>