force-app/main/default/objects/OutboundEnquiry__c/validationRules/Referred_by_GT_Employee_or_Referred_by_N.validationRule-meta.xml
<ValidationRule>
    <fullName>Referred_by_GT_Employee_or_Referred_by_N</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISBLANK( GTEmployee__c ),ISBLANK(  ReferredByNonLinKretaUsers__c  ))</errorConditionFormula>
    <errorMessage>Referred by GT Employee or Referred by Non LinKreta Users (Only one needs to be updated)</errorMessage>
</ValidationRule>